--- a/fjallGuiderna/Views/Shared/_Layout.cshtml
+++ b/fjallGuiderna/Views/Shared/_Layout.cshtml
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - fjallGuiderna</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">fjallGuiderna</a>
+                <a class="navbar-brand" asp-area="" asp-controller="NatureActivities" asp-action="Index">fjallGuiderna</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,11 +22,24 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NatureActivities" asp-action="Index">Aktiviter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Guides" asp-action="Index">Våra Guider</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropDownNav" data-bs-toggle="dropdown" role="button" data-toggle="button"
+                               aria-haspopup="true" aria-expanded="false">
+                                Inställningar
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="dropDownNav">
+                                <a class="dropdown-item" asp-controller="Locations" asp-action="Index">Platser</a>
+                                <a class="dropdown-item" asp-controller="Guides" asp-action="Index">Guider</a>
+                                <a class="dropdown-item" asp-controller="Experiences" asp-action="Index">Upplevelser</a>
+                                <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Kategorier</a>
+                            </div>
+                        </li>
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -38,7 +54,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - fjallGuiderna - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - fjallGuiderna
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
