added authentification for adminpart for CRUD

--- a/fjallGuiderna/Views/Shared/_Layout.cshtml
+++ b/fjallGuiderna/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <div class="dropdown-menu" aria-labelledby="dropDownNav">
                                 <a class="dropdown-item" asp-controller="Locations" asp-action="Index">Platser</a>
                                 <a class="dropdown-item" asp-controller="Guides" asp-action="Index">Guider</a>
-                                <a class="dropdown-item" asp-controller="Experiences" asp-action="Index">Upplevelser</a>
+                                <a class="dropdown-item" asp-controller="NatureActivities" asp-action="Index">Aktiviter</a>
                                 <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Kategorier</a>
                             </div>
                         </li>
