--- a/fjallGuiderna/Views/Shared/_Layout.cshtml
+++ b/fjallGuiderna/Views/Shared/_Layout.cshtml
@@ -27,20 +27,23 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Guides" asp-action="Index">Våra Guider</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropDownNav" data-bs-toggle="dropdown" role="button" data-toggle="button"
-                               aria-haspopup="true" aria-expanded="false">
-                                Lägg till och ändra
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="dropDownNav">
-                                <a class="dropdown-item" asp-controller="Locations" asp-action="Index">Platser</a>
-                                <a class="dropdown-item" asp-controller="Guides" asp-action="IndexAdmin">Guider</a>
-                                <a class="dropdown-item" asp-controller="NatureActivities" asp-action="IndexAdmin">Aktiviter</a>
-                                <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Kategorier</a>
-                            </div>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
 
-                    </ul>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="dropDownNav" data-bs-toggle="dropdown" role="button" data-toggle="button"
+                                   aria-haspopup="true" aria-expanded="false">
+                                    Lägg till och ändra
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="dropDownNav">
+                                    <a class="dropdown-item" asp-controller="Locations" asp-action="Index">Platser</a>
+                                    <a class="dropdown-item" asp-controller="Guides" asp-action="IndexAdmin">Guider</a>
+                                    <a class="dropdown-item" asp-controller="NatureActivities" asp-action="IndexAdmin">Aktiviter</a>
+                                    <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Kategorier</a>
+                                </div>
+                            </li>
+                        }
+                        </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
