validate html and css fix

--- a/fjallGuiderna/Views/NatureActivities/Index.cshtml
+++ b/fjallGuiderna/Views/NatureActivities/Index.cshtml
@@ -71,9 +71,9 @@
                         <button class="btn btn-primary buy-btn"><i class="fas fa-shopping-cart mr-1"></i>Intresseanmälan</button>
                     </div>
                 </div>
-          
+
             </article>
         }
     </div>
+</div>
 
-}
