--- a/fjallGuiderna/Views/NatureActivities/Index.cshtml
+++ b/fjallGuiderna/Views/NatureActivities/Index.cshtml
@@ -68,7 +68,7 @@
                         <p><span class="font-weight-bold">@Html.DisplayNameFor(model => model.Guide):</span> @Html.DisplayFor(modelItem => item.Guide.FullName)</p>
                     </div>
                     <div class="btnWrapper">
-                        <button class="btn btn-primary buy-btn"><i class="fas fa-shopping-cart mr-1"></i>Intresseanmälan</button>
+                        <a btn btn-primary buy-btn href="/contacts/create">Intresseanmälan</a>
                     </div>
                 </div>
 
