--- a/fjallGuiderna/Views/Shared/_Layout.cshtml
+++ b/fjallGuiderna/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                                     <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Kategorier</a>
                                 </div>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Intresseanmälningar</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
